<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.pooja.auxilio.AuthActivity">


    <TextView
        android:id="@+id/Welcome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="40dp"
        android:text="@string/Welcome_string"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/hint_phoneno"
        android:inputType="phone"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/otp_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/hint_otp"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/ip_address_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Enter IP Address of Webcam"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/error_tv"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/error_invalid_phoneno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/error_invalid_phoneno"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/about_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_otp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorPrimaryDark"
        android:padding="20dp"
        android:text="@string/verifyNo_btn"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/proceed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorPrimaryDark"
        android:padding="20dp"
        android:text="proceed"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>
